--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -50,9 +50,12 @@
                     </mat-form-field>
                 </div>
             </form>
-            <div class="buttons">
-                <button mat-raised-button color="accent" (click)="closeTab()" >Cancel</button>
-                <button mat-raised-button style="z-index:99 !important;" [disabled]="disableSave" color="primary" (click)="saveChanges()">Save</button>
+            <div class="buttonWrapper">
+                <mat-divider></mat-divider>
+                <div class="buttons">
+                    <button mat-raised-button color="accent" (click)="closeTab()" >Cancel</button>
+                    <button mat-raised-button style="z-index:99 !important;" [disabled]="disableSave" color="primary" (click)="saveChanges()">Save</button>
+                </div>
             </div>
         </div>
     </div>
