--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -2,7 +2,7 @@
 page.classList.remove('static-page');
 ngOnInit();"></app-edit-profile>
     <mat-sidenav-container>
-        <app-sidenav *ngIf="!loggedUser"></app-sidenav>
+        <app-sidenav *ngIf="loggedUser != null"></app-sidenav>
     </mat-sidenav-container>
         <div id="page" class="nav-page-content">
             <div class="container">
@@ -31,8 +31,8 @@ ngOnInit();"></app-edit-profile>
                             </p>
                         </div>
                         <div class="follows">
-                            <p><b>1M</b> Followers</p>
-                            <p><b>10</b> Following</p>
+                            <p><b>{{followerCount}}</b> Followers</p>
+                            <p><b>{{followingCount}}</b> Following</p>
                         </div>
                     </div>
                     <mat-divider></mat-divider>
