--- a/src/app/components/global/user-profile-preview/user-profile-preview.component.css
+++ b/src/app/components/global/user-profile-preview/user-profile-preview.component.css
@@ -1,7 +1,7 @@
 .container{
     padding:1rem;
     background-color:rgba(0,0,0,0.4);
-    width: 300px;
+    max-width: 580px;
 }
 
 .handler-follow{
@@ -9,6 +9,30 @@
     flex-direction:row;
     gap:0.5rem;
     align-items:flex-end;
+}
+
+.name{
+    color:rgba(255,255,255,0.9);
+}
+.head-flex{
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
+}
+
+.follow-button{
+    border:1px solid white;
+    border-radius:20px;
+    color:white;
+    background-color:transparent;
+    display:flex !important;
+    flex-direction: row;
+    align-items:center;
+}
+
+.Following{
+    background-color:white !important;
+    color:black !important;
 }
 
 .follows{
@@ -53,4 +77,9 @@ p{
 
 .bio{
     margin-left:calc(50px + 1rem);
+    max-width:60vw;
+}
+.bio p{
+    text-wrap: wrap;
+    color:white;
 }
