--- a/src/app/components/global/user-profile-preview/user-profile-preview.component.html
+++ b/src/app/components/global/user-profile-preview/user-profile-preview.component.html
@@ -1,16 +1,24 @@
 <div class="container">
-    <div class="image-split">
-        <div class="profile-picture">
-            <img src="{{shownUser.profilePictureURL ||'https://cdn.game-hub.pt/placeholder-pfp.jpg'}}" alt="Profile Picture">
-        </div>
-        <div class="user-info">
-            <div class="names">
-                <p class="name">{{shownUser.displayName}}</p>
-                <div class="handler-follow">
-                    <p class="handler">&#64;{{shownUser.username}}</p>
-                    <p class = "follows" *ngIf="follows">Follows You</p>
+    <div class="head-flex">
+        <div class="image-split">
+                <div class="profile-picture">
+                    <img src="{{shownUser.profilePictureURL ||'https://cdn.game-hub.pt/placeholder-pfp.jpg'}}" alt="Profile Picture">
                 </div>
-            </div>
+                <div class="user-info">
+                    <div class="names">
+                        <p class="name">{{shownUser.displayName}}</p>
+                        <div class="handler-follow">
+                            <p class="handler">&#64;{{shownUser.username}}</p>
+                            <p class = "follows" *ngIf="followsLoggedUser">Follows You</p>
+                        </div>
+                    </div>
+                </div>
+        </div>
+        <div class="follow-button-wrapper">
+            <button *ngIf="!isLoggedUser" mat-fab extended id="followButton" (click)="toggleFollow()" class="follow-button" color="white">
+                <mat-icon>{{followButtonIcon}}</mat-icon>
+                {{followButtonText}}
+            </button>
         </div>
     </div>
     <div class="bio">
@@ -19,3 +27,4 @@
         </p>
     </div>
 </div>
+<mat-divider></mat-divider>
