Implement post view

--- a/src/app/pages/general/feed/feed.component.html
+++ b/src/app/pages/general/feed/feed.component.html
@@ -1,7 +1,3 @@
 <app-new-post-exploreview *ngIf="!isMobile"></app-new-post-exploreview>
 <mat-divider *ngIf="!isMobile"></mat-divider>
-<app-post-exploreview></app-post-exploreview>
-<app-post-exploreview></app-post-exploreview>
-<app-post-exploreview></app-post-exploreview>
-<app-post-exploreview></app-post-exploreview>
-<app-post-exploreview></app-post-exploreview> 
+<app-post *ngFor="let post of posts" [post]="post"> </app-post>
