Fixed logged off user details on profile.

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -76,10 +76,10 @@
           </p>
         </div>
         <div class="follows">
-          <p class="follow-click" (click)="openFollowList(0)">
+          <p id="followerClick" class="follow-click" (click)="openFollowList(0)">
             <b>{{ followerCount }}</b> Followers
           </p>
-          <p class="follow-click" (click)="openFollowList(1)">
+          <p id="followingClick" class="follow-click" (click)="openFollowList(1)">
             <b>{{ followingCount }}</b> Following
           </p>
         </div>
