--- a/src/app/components/new-post-exploreview/new-post-exploreview.component.html
+++ b/src/app/components/new-post-exploreview/new-post-exploreview.component.html
@@ -1,4 +1,5 @@
-<mat-card style="background-color: rgba(0, 0, 0, 0)">
+<mat-card style="background-color: rgba(0, 0, 0, 0); 
+padding:1rem; max-width:580px; width:100vw">
   <mat-card-header>
     <div mat-card-avatar>
       <img
