--- a/src/app/components/global/post/post.component.css
+++ b/src/app/components/global/post/post.component.css
@@ -6,7 +6,6 @@
 }
 
 .user {
-  margin-top: 1rem;
   display: flex;
   flex-direction: row;
   gap: 1rem;
@@ -41,6 +40,7 @@
   border-right:1px white solid;
   padding:1rem;
   max-width:580px;
+  width:100vw;
   margin:0 auto;
   display:flexbox;
   flex-direction: column;
@@ -48,6 +48,7 @@
 
 .postContent {
   margin-top: 0.5rem;
+  margin-bottom:1rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
