--- a/src/app/components/new-post-exploreview/new-post-exploreview.component.css
+++ b/src/app/components/new-post-exploreview/new-post-exploreview.component.css
@@ -1,3 +1,9 @@
+.new-post-card{
+  background-color: rgba(0, 0, 0, 0); 
+  margin:1rem;
+  max-width:580px;
+  width:100vw
+}
 .header {
   display: flex;
   flex-direction: row;
