--- a/src/app/pages/general/feed/feed.component.css
+++ b/src/app/pages/general/feed/feed.component.css
@@ -10,3 +10,8 @@
     border-left:1px white solid;
     border-right:1px white solid;
 }
+
+.post{
+    border-left:1px white solid;
+    border-right:1px white solid;
+}
